--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
             android:inputType="none"
             android:focusable="false"
             android:clickable="true"
-            android:layout_marginBottom="24dp" />
+            android:layout_marginBottom="24dp" /> <!--come-->
 
 
         <Button
