--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,16 +21,37 @@
         android:id="@+id/productListFragment"
         android:name="pe.edu.cibertec.proyecto_efrst.fragments.ProductListFragment"
         android:label="Lista de productos" >
+
         <argument
             android:name="categoria"
             app:argType="string"
             android:defaultValue="Todos" />
+
+        <!-- 🔽 Agrega esta acción -->
+        <action
+            android:id="@+id/action_productListFragment_to_productDetailFragment"
+            app:destination="@id/productDetailFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/productDetailFragment"
+        android:name="pe.edu.cibertec.proyecto_efrst.fragments.ProductDetailFragment"
+        android:label="Detalle del producto">
+        <argument
+            android:name="product"
+            app:argType="pe.edu.cibertec.proyecto_efrst.models.Product" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="pe.edu.cibertec.proyecto_efrst.fragments.FavoritesFragment"
-        android:label="Favoritos" />
+        android:label="Favoritos" >
+
+        <action
+            android:id="@+id/action_favoritesFragment_to_productDetailFragment"
+            app:destination="@id/productDetailFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/cartFragment"
