--- a/app/src/main/res/layout/item_cart_product.xml
+++ b/app/src/main/res/layout/item_cart_product.xml
@@ -107,7 +107,7 @@
             android:id="@+id/btnRemove"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_delete"
+            android:src="@drawable/ic_carrito_eliminar"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Eliminar del carrito"
             app:layout_constraintBottom_toBottomOf="parent"
