--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -3,8 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@android:color/white">
 
+    <!-- Título -->
+    <TextView
+        android:id="@+id/tvTituloOrdenes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Mis órdenes"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/abril_fatface_regular"
+        android:textColor="@color/app_fondo" />
+
+    <!-- Texto vacío -->
     <TextView
         android:id="@+id/tvEmptyOrders"
         android:layout_width="wrap_content"
@@ -14,9 +28,9 @@
         android:textSize="16sp"
         android:textColor="@android:color/darker_gray" />
 
+    <!-- Lista de órdenes -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvOrders"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </LinearLayout>
