--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="app_fondo">#ff5f43</color>
+    <color name="app_naranja">#ff5f43</color>
+    <color name="app_morado">#5044a4</color>
 </resources>
